# niet

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main.yml  python-app.yml
niet/: __init__.py  __main__.py  actions.py  output.py  url.py
tests/: test_niet.py  test_output.py  test_url.py
tests/samples/: sample.json  sample.toml  sample.yaml  sample_not_indented.json  test.json  test.xml  test.yaml
