[metadata]
name = niet
home-page = https://github.com/openuado/niet/
summary = Shell config file parser (json, yaml)
description-file = 
    README.md
    AUTHORS
author = openuado
author-email = herveberaud.pro@gmail.com
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    niet

[entry_points]
console_scripts =
    niet = niet.__main__:main

[wheel]
universal = 1
