[metadata]
name = niet
home_page = https://github.com/openuado/niet/
summary = Shell config file parser (json, yaml)
description_file =
    README.md
    AUTHORS
author = openuado
author_email = herveberaud.pro@gmail.com
license = MIT
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    niet

[entry_points]
console_scripts =
    niet = niet.__main__:main

[wheel]
universal = 1
